# SkyStore

./: .env.sample  .gitignore  all_data.json  catalog.json  decorators.py  new_json.json  pyproject.toml  utils.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_image.py
catalog/: admin.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_delete_contact.py  0004_contact.py  0005_delete_contact_delete_product.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
contact/: admin.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
product/: admin.py  apps.py  forms.py  models.py  permissions.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_product_user.py  0004_product_is_published.py  0005_alter_product_is_published.py  0006_alter_product_options.py  0007_alter_product_options.py
templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
templates/catalog/: base.html  category_detail.html  category_list.html  contact_form.html  contacts.html  index.html  product.html  products.html
templates/product/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  productbycategory_list.html
templates/users/: login.html  register.html  user_form.html  verify_successful.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+1 more)
version/: admin.py  forms.py  models.py
(+5 files in other folders)
